--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <!-- NAV MENU -->
         <div class="container">
+        <!-- NAV MENU -->
             <nav class="clearfix">
                 <!-- LOGO -->
                 <div class="col logo">
@@ -27,15 +27,18 @@
                 </div>
                 <div class="col-right menu">
                     <ul class="menu-top">
-                        <li> <a href="#"> Perchè Dropbox?</a></li>
-                        <li> <a href="#"> Funzioni</a></li>
-                        <li> <a href="#"> Piani e prezzi</a></li>
+                        <li> <a href="#"> Supporto</a></li>
+                        <li> <a href="#"> Contatta l'ufficio vendite</a></li>
+                        <li> <a href="#"> Accedi</a></li>
                         <li> <a class="start" href="#"> Inizia</a></li>
                     </ul>
                 </div>
             </nav>
-        </div>
+        </div>   
     </header>
-    
+
+    <main>
+        
+    </main>
 </body>
 </html>
