--- a/index.html
+++ b/index.html
@@ -210,18 +210,18 @@
                 <div class="col col-operations">
                     <img src="img/business-feature-switching-tools.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt-12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                    <p class="txt-month">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
                 </div>
                 <div class="col col-operations-center">
                     <img src="img/business-feature-coordinate-it.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt-12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    <p class="txt-month">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
 
                 </div>
                 <div class="col col-operations">
                     <img src="img/business-feature-multi-device.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt-12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    <p class="txt-month">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
             </div>
             <!-- SECOND ROW -->
@@ -229,18 +229,18 @@
                 <div class="col col-operations">
                     <img src="img/business-feature-integrations-it.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt-12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    <p class="txt-month">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
                 <div class="col col-operations-center">
                     <img src="img//business-feature-send-files-it.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt-12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    <p class="txt-month">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
 
                 </div>
                 <div class="col col-operations">
                     <img src="img/business-feature-security.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt-12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    <p class="txt-month2">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
             </div>
 
@@ -318,12 +318,45 @@
                         <h2>Porta Dropbox Business nella tua azienda.</h2>
                     </div>
                     <div class="col">
-                        <a href="#">Inizia la tua prova gratuita</a>
+                        <a class="buttons" href="#">Inizia la tua prova gratuita</a>
                     </div>
                 </div>
             </div>
-           
         </div>
     </main>
+    <footer>
+        <!-- QUESTIONS & FAQ -->
+        <div class="cont-faq">
+            <div class="faq">
+                <h2>Domande frequenti</h2>
+                <ul>
+                    <i class="fas fa-chevron-down"></i>
+                    <li class="txt-month"> Qual è la differenza tra Dropbox Business Stantard e Dropbox Business Advanced? </li>
+                    <i class="fas fa-chevron-down"></i>
+                    <li class="txt-month"> Qual è la differenza tra Dropbox Business Stantard e Dropbox Business Advanced? </li>
+                    <i class="fas fa-chevron-down"></i>
+                    <li class="txt-month"> Qual è la differenza tra Dropbox Business Stantard e Dropbox Business Advanced? </li>
+                    <i class="fas fa-chevron-down"></i>
+                    <li class="txt-month"> Qual è la differenza tra Dropbox Business Stantard e Dropbox Business Advanced? </li>
+                    
+                </ul>
+            </div>
+        </div>
+    <footer>
+        <div class="container-footer">
+            <div class="footer-menu clearfix">
+                <div class="col footer-menu">
+                    <h5>Dropbox</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Applicazione desktop</a></li>
+                    </ul>
+                 </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
