--- a/index.html
+++ b/index.html
@@ -323,8 +323,7 @@
                 </div>
             </div>
         </div>
-    </main>
-    <footer>
+    
         <!-- QUESTIONS & FAQ -->
         <div class="cont-faq">
             <div class="faq">
@@ -342,20 +341,64 @@
                 </ul>
             </div>
         </div>
-    <footer>
+    </main>     
+        <footer>
         <div class="container-footer">
             <div class="footer-menu clearfix">
                 <div class="col footer-menu">
-                    <h5>Dropbox</h5>
+                    <h2>Dropbox</h5>
                     <ul>
                         <li><a href="#">Applicazione desktop</a></li>
-                        <li><a href="#">Applicazione desktop</a></li>
-                        <li><a href="#">Applicazione desktop</a></li>
-                        <li><a href="#">Applicazione desktop</a></li>
-                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
                     </ul>
-                 </div>
+                </div>
+                <div class="col footer-menu">
+                    <h2>Prodotti</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col footer-menu">
+                    <h2>Azienda</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col footer-menu">
+                    <h2>Supporto</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col footer-menu">
+                    <h2>Comunity</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                    </ul>
+                 </div>            
             </div>
+          <div class="orizontal-rules-footer"></div>    
+          <div class="world">
+            <i class="fas fa-globe-americas"> Italiano</i>
+            <i class="fas fa-caret-up"></i>
+          </div> 
         </div>
     </footer>
 </body>
